# BGTU

./: .gitignore
ABC/: Ассемблер.odt
ABC/lab1/: ~$бораторная работа №1.docx  Лабораторная работа №2.docx
ABC/lab2/: .~lock.Отчет.odt#  lab2.asm  КОП.ods  Отчет.odt
ABC/lab3/: code.asm  code.bat  Отчет3.odt
ASD/Lab 1/: .~lock.Отчет1.odt#  .~lock.Пример.odt#  main.c  Отчет1.odt  Пример.docx
ASD/Lab 2/: .~lock.Отчет АСД Лабораторная 2.odt#  Отчет АСД Лабораторная 2.odt
ASD/Lab 3/: .~lock.Отчет АСД Лабораторная 3.odt#  Отчет АСД Лабораторная 3.odt
ASD/Lab 4/: Отчет АСД Лабораторная 4.odt
ASD/Lab 5/: Лабораторная_работа_5 Чувилко_Илья.odt
DisMat/: .~lock.Термины.odt#  Термины.odt
DisMat/lab_1_1/: .~lock.Лабораторная 1_1.odt#  CMakeLists.txt  main.c
DisMat/lab_1_1/libs/algorithms/: algorithms.c
DisMat/lab_1_1/libs/array/: array.c
DisMat/lab_1_1/sets/bitSet/: bitSet.c
DisMat/lab_1_1/sets/unorderedSet/: unorderedSet.c  unorderedSet.h
Economy/: Основы_экономики_метод_для_самост_работы.docx  к_лекции_Введение_в_экономику_вопрос_4.docx  к_лекции_Механизм_функционирования_рынка_вопрос_1.docx  практикум Экономика.docx
English/: 17_11.odt
IB/: .~lock.Конспект.docx#  Конспект.docx  Основы ИБ.odt
KG/: Laboratornaya_rabota_5_2020.docx  Primery_programm_OpenGL_GLSL_QT6.tar
Philosophy/: Praktikum_EB.docx  Шопенгауэр.odt
Pravo/: PV-211_Pravovedenie_1.docx
Programming Basics/: ~$ределения.odt
SisMod/: .~lock.SisMod_metodichka_2020.docx#  METODIChESKIE_UKAZANIYa_SIST_MODEL.docx  Posobie_Sistemnoe_modelirovanie.doc
TA/: ПВ201_Морозов_лаб3_ТА.docx
TA/lab1/Example/: CMakeLists.txt  main.cpp
TA/lab1/Example/include/: GrammaParser.hpp  GrammaScanner.hpp  common.hpp
TA/lab1/Example/src/: GrammaParser.cpp  GrammaScanner.cpp  TreeBuilder.cpp
TA/lab1/code/: CMakeLists.txt
TA/lab1/code/include/: TreeBuilder.hpp
TA/ta3/: back.txt  (+4 more)
Клуб любителей раков/: Корнишонная.md  корнишоны.md  огурчики.md  пикули.md  элитные пикули.md
(+656 files in other folders)
